--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "JosephCollins Udeani",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.11",
     "nodemon": "^1.19.4"
